# ClipFileNamesUpdater

./: .env.example  .gitignore  README.md  game_dicts.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: python.yml
src/: adapt_file_names.py  config.py  patterns.py  replacement_dict.py  update_file_names.py
src/filename_adapters/: mp4_adapter.py  mp4_file_name_adapter.py  png_adapter.py  png_file_name_adapter.py
tests/: test_adapt_file_names.py  test_update_file_names.py
