[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ClipFileNamesUpdater"
version = "0.0.0"
description = "Utility to adapt clip file names"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "unittest-parametrize",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src"]