[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clipfilenamesupdater"
version = "0.0.0"
description = "Utility to adapt clip file names"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "unittest-parametrize",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
py-modules = ["adapt_file_names", "update_file_names"]
